---
source: spade-tests/src/typeinference.rs
---
fn test() -> int<8> {
    256u
}


error: Integer value does not fit in int<8>
  ┌─ testinput:2:5
  │
2 │     256u
  │     ^^^^ 256 does not fit in an int<8>
  │
  = note: int<8> fits integers in the range (-128, 127)


